 * Added dom_compare tool to, er, compare DOM implementations

2006-10-24 cjg
 * Moved use Apache::SubProcess into AnApache so it handles mod_perl 1.99 
    correctly.

2006-10-24 moj
 * Created render_action_button in Screen that is used by action_bar and
    action_list. 
 * Added render_action_button_if_allowed - only returns a button if it is
    allowed to be viewed. Returns an empty doc fragment otherwise.
 * Created 'allowed' to return true if an action is allowed (used by 
    action_list and render_action_button_if_allowed)

2006-10-24 moj
 * Added 'has_stalled' to Index - returns true if the tick file is out of
    date.
 * Added 'force_start' to Index - stops the indexer (with no checking of the
    result - just to kill off any remaining process), unlinks the pid and tick
    files, and then starts the indexer and returns the result.
 * Added force_start_indexer to the Admin/Index screen
 * Rejigged Screen.pl to take $params (a hash array that can contain 'hidden').
    This replaces 'passthrough'.
 * Added Admin.pm. This warns if the indexer is not started, or needs force
    restarting, with buttons to carry these out. It also shows a list of
    available admin tools. 
 * Added the relevant phrases for the start/stop/force_start
 * Adjusted indexer.pl to use has_stalled
 * Added necessary roles to User.pm

2006-10-25 moj
 * Moved edit-subject and edit-user privs into admin, along with admin-indexer
 * EPrints::Index::stop_indexer now writes a indexer.suicide file, and waits for 8
    seconds to see if the indexer has exited before trying the cmdline approach.
 * Put the logfile path in the 'couldn't start/stop' phrase for now, should be
    a link to a screen soon.
 * Moved the indexer warning code to Status and put in indexer_warnings
 * Added 'Indexer Status' to the status view as well as a few phrases
 * Form now uses 'inline' to keep the button in the right place.
 * Moved stop_indexer to cleanup_indexer